env/k8s-deploy/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: FRONTEND_IMAGE
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
