env/k8s-deploy/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
          # readinessProbe:
          #   exec:
          #     command:
          #       - "psql"
          #       - "-U"
          #       - "schuumadmin"
          #       - "-d"
          #       - "schuum"
          #       - "-c"
          #       - "SELECT 1"
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 3
          # livenessProbe:
          #   exec:
          #     command:
          #       - "psql"
          #       - "-U"
          #       - "schuumadmin"
          #       - "-d"
          #       - "schuum"
          #       - "-c"
          #       - "SELECT 1"
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 3
      volumes:
        - name: postgresdata
          persistentVolumeClaim:
            claimName: postgres-volume-claim
