env/k8s-deploy/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels: 
    app: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
