env/k8s-deploy/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: DUMMY_HOST
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
